Fix static analysis violations.